@@ -604,6 +604,8 @@ class VideoInfo(object):
 
     def get_player_js(self, video_id, js=''):
         def _normalize(javascript_url):
+            if javascript_url in ['http://', 'https://']:
+                javascript_url = ''
             if javascript_url and not javascript_url.startswith('http'):
                 javascript_url = 'https://www.youtube.com/%s' % \
                                  javascript_url.lstrip('/').replace('www.youtube.com/', '')
@@ -614,7 +616,9 @@ class VideoInfo(object):
 
         cached_js = self._data_cache.get_item(DataCache.ONE_HOUR * 4, 'player_javascript')
         if cached_js and cached_js.get('player_javascript', {}).get('url'):
-            return cached_js.get('player_javascript', {}).get('url')
+            cached_url = cached_js.get('player_javascript', {}).get('url')
+            if cached_url not in ['http://', 'https://']:
+                return cached_url
 
         if js:
             return _normalize(js)
@@ -628,16 +632,22 @@ class VideoInfo(object):
         _player_config = '{}'
         player_config = dict()
 
-        lead = 'yt.setConfig({\'PLAYER_CONFIG\': '
-        tail = ',\'EXPERIMENT_FLAGS\':'
-        if html.find(tail) == -1:
-            tail = '});'
-        pos = html.find(lead)
-        if pos >= 0:
-            html2 = html[pos + len(lead):]
-            pos = html2.find(tail)
+        def find_config(lead, tail):
+            if html.find(tail) == -1:
+                tail = '});'
+            pos = html.find(lead)
             if pos >= 0:
-                _player_config = html2[:pos]
+                html2 = html[pos + len(lead):]
+                pos = html2.find(tail)
+                if pos >= 0:
+                    return html2[:pos]
+            return None
+
+        _player_config = find_config('yt.setConfig({\'PLAYER_CONFIG\': ', ',\'EXPERIMENT_FLAGS\':')
+        if _player_config is None:
+            _player_config = find_config(',\'PLAYER_CONFIG\': ', 'yt.setConfig({INNERTUBE_API_VERSION:')
+        if _player_config is None:
+            _player_config = '{}'
 
         try:
             player_config.update(json.loads(_player_config))
