@@ -1,6 +1,7 @@
 [fix] notifications for some languages on Kodi 19
 [fix] searching for some languages
 [fix] loading on some versions of python 3
+[fix] some videos failing to play with an Invalid URL exception
 [upd] use xbmcvfs.translatePath if available, clean up for Kodi 19
 
 6.8.4
